Cherry-pick r247466. rdar://problem/53228860

[ Mojave WK1 ] Some Image tests are flakey failures and are failing in tandem with zoomed in or blank image results
    https://bugs.webkit.org/show_bug.cgi?id=193108

    Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2019-07-15
    Reviewed by Simon Fraser.

    Add a workaround for <rdar://problem/17084993> in createBitmapContextFromWebView().
    Re-request the snapshot at kCGWindowImageNominalResolution if it was captured
    at the wrong scale.

    * DumpRenderTree/mac/PixelDumpSupportMac.mm:
    (takeWindowSnapshot):
    (createBitmapContextFromWebView):

    Canonical link: https://commits.webkit.org/213692@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247466 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.22@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@247586 268f45cc-cd09-0410-ab3c-d52691b4dbfc