Tools/DumpRenderTree/mac/PixelDumpSupportMac.mm
@@ -36,6 +36,7 @@
 #import "TestRunner.h"
 #import <CoreGraphics/CGBitmapContext.h>
 #import <QuartzCore/QuartzCore.h>
+#import <pal/spi/cg/CoreGraphicsSPI.h>
 #import <wtf/Assertions.h>
 #import <wtf/RefPtr.h>
 
@@ -80,6 +81,12 @@ static void paintRepaintRectOverlay(WebView* webView, CGContextRef context)
     
     CGContextEndTransparencyLayer(context);
     CGContextRestoreGState(context);
+}
+
+static CGImageRef takeWindowSnapshot(CGSWindowID windowID, CGWindowImageOption imageOptions)
+{
+    imageOptions |= kCGWindowImageBoundsIgnoreFraming | kCGWindowImageShouldBeOpaque;
+    return CGWindowListCreateImage(CGRectNull, kCGWindowListOptionIncludingWindow, windowID, imageOptions);
 }
 
 RefPtr<BitmapContext> createBitmapContextFromWebView(bool onscreen, bool incrementalRepaint, bool sweepHorizontally, bool drawSelectionRect)
@@ -128,7 +135,19 @@ RefPtr<BitmapContext> createBitmapContextFromWebView(bool onscreen, bool increme
 
             // Ask the window server to provide us a composited version of the *real* window content including surfaces (i.e. OpenGL content)
             // Note that the returned image might differ very slightly from the window backing because of dithering artifacts in the window server compositor.
-            CGImageRef image = CGWindowListCreateImage(CGRectNull, kCGWindowListOptionIncludingWindow, [[view window] windowNumber], kCGWindowImageBoundsIgnoreFraming | kCGWindowImageShouldBeOpaque);
+            NSWindow *window = [view window];
+            CGImageRef image = takeWindowSnapshot([window windowNumber], kCGWindowImageDefault);
+
+            if (image) {
+                // Work around <rdar://problem/17084993>; re-request the snapshot at kCGWindowImageNominalResolution if it was captured at the wrong scale.
+                CGFloat desiredSnapshotWidth = window.frame.size.width * deviceScaleFactor;
+                if (CGImageGetWidth(image) != desiredSnapshotWidth)
+                    image = takeWindowSnapshot([window windowNumber], kCGWindowImageNominalResolution);
+            }
+
+            if (!image)
+                return nullptr;
+
             CGContextDrawImage(context, CGRectMake(0, 0, CGImageGetWidth(image), CGImageGetHeight(image)), image);
             CGImageRelease(image);
 
